# mnist-former

./: .gitignore  README.md  pyproject.toml
mnist_former/: __init__.py  cli_infer.py  cli_train.py  config.py  data.py  inference.py  model.py  profiling.py  train.py
mnist_former.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
notebooks/: 01_training_curves.ipynb  02_attention_and_samples.ipynb  03_profiler_trace.ipynb
runs/exp1/: metrics.jsonl  run_config.json
runs/exp1/checkpoints/: best.pt  last.pt
runs/exp2/: metrics.jsonl  run_config.json
runs/exp2/checkpoints/: best.pt  last.pt
scripts/: infer.py  train.py
tests/: test_smoke.py
